# data-management-article

./: .gitignore  LICENSE  README.md  notebook.ipynb  pyproject.toml
src/data_manager/: __init__.py  loaders.py  manager.py  savers.py  validator.py
